# ni-pdp

./: .gitignore  CMakeLists.txt  README.md  bench_results_1.csv  bench_results_2.csv  bench_results_dfs_count.csv  bench_results_mpi.csv  bench_results_no_dfs_count.csv  bench_results_no_dfs_count_1.csv  benchmark.sh  bogdaale-PDP-26-2.tar  mpi_script.sh  results_analysis.ipynb  run_all.ps1  run_all.sh  slurm_bench.sh
mapsol/: mapb6_6c_sol_20260304_082513.txt  mapb7_7c_sol_20260304_082513.txt  mapb7_7d_sol_20260304_082513.txt  mapb7_7e_sol_20260304_082513.txt  mapb7_7k_sol_20260304_082513.txt  mapb8_7c_sol_20260304_082513.txt  mapb8_7d_sol_20260304_082513.txt  mapb8_7f_sol_20260304_082513.txt  mapb8_7i_sol_20260304_082513.txt  mapb8_8a_sol_20260304_082514.txt  mapb8_8b_sol_20260304_082514.txt  mapb9_9a_sol_20260304_082514.txt  mapb9_9b_sol_20260304_082514.txt
src/: main.cpp  main_data_paral.cpp  main_sequential.cpp  main_task_paral.cpp  main_wip.cpp
